# air-icon-launcher

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  bun.lockb  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.codex/: config.toml
.github/workflows/: ci.yml
plugins/example-plugin/: README.md  main.js  manifest.json
scripts/: patch-solar-icons.cjs
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_settings.rs  autostart_service.rs  clipboard.rs  clipboard_listener.rs  config_manager.rs  corner_hotspot.rs  db.rs  display.rs  drag.rs  error.rs  keyboard_hook.rs  lib.rs  main.rs  pinyin.rs  plugins.rs  process_monitor.rs  search.rs  system.rs  tray.rs  window_effects.rs  windows_service_entry.rs
src-tauri/src/bak/: clipboard.rs.bak.md  config_manager.rs.bak.md
src-tauri/src/clipboard/: cache.rs  image.rs  mod.rs  monitor.rs  platform.rs  types.rs  writer.rs
src-tauri/src/commands/: ai_organizer.rs  installed_apps.rs  mod.rs  pinyin.rs  scan_cache.rs  search.rs
src-tauri/src/config/: mod.rs  types.rs
src/components/: ClipboardHistory.vue  OnboardingGuide.vue  PluginPermissionDialog.vue  SearchBox.vue  SearchFallback.vue  contextMenu.vue
src/composables/: index.ts  types.ts  useAutoHideCountdown.ts  useClipboardEvents.ts  useConfirmDialog.ts  useContextMenu.ts  useContextTrigger.ts  useDataManagement.ts  useDragDrop.ts  useGlobalEvents.ts  useGlobalToast.ts  useHomePageState.ts  useInputDialog.ts  useInputDialog.types.ts  useItemsHelper.ts  useLaunchCooldown.ts  useLaunchDuration.ts  useLaunchStatus.ts  useLongPress.ts  useMenuActions.ts  usePinningHelper.ts  useScanCache.ts  useSearch.ts  useSearchSync.ts  useSearchToLaunch.ts  useTauriEvents.ts  useTheme.ts  useWebAiExport.ts  useWindowDrag.ts  useWindowPosition.ts
src/events/: itemEvents.ts
src/menus/: actionRegistry.ts  conditions.ts  contextMenu.ts  contextMenuContext.ts  contextMenuTypes.ts
src/plugins/: api-factory.ts  api-v1.ts  api.ts  contextMenuRegistry.ts  dto.ts  index.ts  manager.ts  permissions.ts  resource-tracker.ts  types.ts
src/router/: index.ts
src/services/: iconCache.ts
src/stores/: categoryStore.ts  clipboardStore.ts  guideStore.ts  index.ts  itemsStore.ts  launcher-search.ts  launcherStore.ts  overrideStore.ts  searchExtensionsStore.ts  searchStore.ts  settingsStore.ts  statsStore.ts  uiStore.ts
src/styles/: _scrollbar.scss  themes.css  themes.scss
src/types/: node-fs.d.ts  (+3 more)
(+100 files in other folders)
