[package]
name = "air-icon-launcher"
version = "0.1.6"
description = "A Windows desktop launcher for organizing and launching apps"
authors = ["Air"]
license = "MIT"
edition = "2021"
repository = "https://github.com/your-username/air-icon-launcher"
documentation = "https://github.com/your-username/air-icon-launcher#readme"
keywords = ["launcher", "desktop", "windows", "tauri"]
categories = ["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "air_icon_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_RemoteDesktop",
    "Win32_System_WindowsProgramming",
    "Win32_System_Registry",
    "Win32_System_Services",
    "Win32_Security",
    "Win32_System_DataExchange",
    "Win32_System_Ole",
    "Win32_System_Memory",
    "Win32_System_Environment",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
] }
windows-service = "0.7"
arboard = "3"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
once_cell = "1"
winreg = "0.52"
fuzzy-matcher = "0.3"
pinyin = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
crossbeam-channel = "0.5"
chrono = "0.4"
tokio = { version = "1", features = ["time"] }

[profile.dev]
incremental = true # 以较小的步骤编译您的二进制文件。

[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好的优化。
lto = true        # 启用链接时优化。
opt-level = 3     # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic = "abort"   # 通过禁用 panic 处理程序来提高性能。
strip = true      # 确保移除调试符号。
